<resources>
    <string name="app_name">RecyclerViewAPI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language_settings">Change Language</string>

    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>

    <string name="movie_name">Name</string>
    <string name="movie_director">Director</string>
    <string name="movie_prod_house">Production House</string>
    <string name="movie_year">Release Date</string>
    <string name="movie_type">Type</string>
    <string name="movie_synopsis">Synopsis</string>
    <string name="movie_poster">Poster</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="movie_rating">Rating</string>
    <string name="title_detail">Movie/TV Show Information</string>
    <string name="title_genres">Genres</string>
    <string name="title_homepage">Homepage</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_unfavorite">Set as Not Favorite</string>
    <string name="title_favorite_movie">Favorite Movie</string>
    <string name="title_favorite_tv_show">Favorite TV Show</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
</resources>
